2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_free): Use
	g_list_free_full (available since glib 2.28) instead of
	a foreach/free combination.

2016-06-22  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_connect_authenticate): Add cacert
	parameter to dummy version of the function.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/openvas_networking.c: Remove a left-over include
	directive for stdlib.h that has no effect anymore.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* misc/openvas_logging.c (openvas_log_lock_init): Drop
	code patch for Glib version < 2.31 because we can
	rely on presence of at least 2.32.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_ssh.c (my_ssh_pki_import_privkey_base64),
	misc/openvas_ssh.c (openvas_ssh_public_from_private):
	Now that we can rely on minimum of 2.32 of glib, we can
	rely on presence of g_mkdtemp_full and drop the alternative.

2016-06-21  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt, INSTALL: Imcrease dependency for glib from 2.16 to
	2.32 in order to allow the use of newer API elements. Also,
	prior to 2.32 there is subject to the (disputed) CVE-2012-0039.

2016-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/network.c (socket_get_ssl_compression): Drop handling
	of GNUTLS_COMP_LZO which does not exist anymore since
	GnuTLS version 3.0.

2016-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_connect_authenticate): Make braces
	consistent.

	* misc/ldap_connect_auth.h: Neaten indent.

2016-06-21  Matthew Mundell <matthew.mundell@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_connect_authenticate): Add cacert arg.
	Pass to ldap_auth_bind.
	(ldap_auth_bind): Add cacert arg.  Use for LDAP_OPT_X_TLS_CACERTFILE if
	given.
