@@ -42,7 +42,6 @@
 #include <utime.h>
 
 #include "nvti.h"
-#include "../misc/nvt_categories.h"
 
 #undef  G_LOG_DOMAIN
 #define G_LOG_DOMAIN "lib  nvti"
@@ -1464,20 +1463,4 @@ nvti_t *
 nvtis_lookup (nvtis_t * nvtis, const char *oid)
 {
   return g_hash_table_lookup (nvtis, oid);
-}
-
-/**
- * @brief Checks that an NVT category is safe.
- *
- * @param category  Category to check.
- *
- * @return 0 if category is unsafe, 1 otherwise.
- */
-int
-nvti_category_is_safe (int category)
-{
-  if (category == ACT_DESTRUCTIVE_ATTACK || category == ACT_KILL_HOST
-      || category == ACT_FLOOD || category == ACT_DENIAL)
-    return 0;
-  return 1;
 }
