@@ -1,3 +1,12 @@
+2016-06-23  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* base/nvti.c (nvti_category_is_safe): Move function to nasl/nasl.c.
+	Remove include from misc.
+
+	* base/nvti.h: Remove function prototype.
+
+	* nasl/nasl.c (nvti_category_is_safe): New function.
+
 2016-06-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* base/openvas_hosts.c (openvas_hosts_free): Use
